<resources>
    <string name="app_name">BloodSearch</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="userName">User Name</string>
    <string name="name">Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="doornumber">Door, Street number</string>
    <string name="cityname">City, State</string>
    <string name="zip">zip</string>
    <string name="bloodgroup">Blood Group</string>
    <string name="milesToTravel">Miles willing to travel</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invald_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signupactivity">Sign up</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
